GM-60 implement save application action